feat(admin): add drag&drop functionality with multiple files upload to add_project

--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -26,10 +26,10 @@
                         readonly="readonly">
                     <label for="slug">Slug</label>
                 </div>
-                <input type="hidden" id="url-for-photos" value="{{ url_for('photos')}}">
+                <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
                 <input type="hidden" id="collection" value="blogs">
                 <input type="hidden" name="photo-list" id="photo-list">
-                <input type="file" name="photos" id="drop-file-elem" accept="image/*">
+                <input type="file" name="files" id="drop-file-elem" accept="image/*">
                 <div id="drop-area" data-multiple="false">
                     <i class="bi bi-upload"></i>
                         Drag&drop files here or click to select...
