--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <form action="{{ url_for('add_project') }}" method="POST" enctype="multipart/form-data">
+        <form action="{{ url_for('add_project') }}" method="POST" enctype="multipart/form-data" id="dropzoneForm">
             <div class="card-header">
                 <h4 class="text-center">New</h4>
             </div>
@@ -44,14 +44,19 @@
                         placeholder="..."></textarea>
                     <label for="description">Description</label>
                 </div>
-                <div class="mb-3">
-                    <label for="photos" class="form-label">Photos</label>
-                    <input class="form-control" id="photos" name="photos" type="file" accept="image/*" multiple>
+                <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
+                <input type="hidden" id="collection" value="projects">
+                <input type="hidden" name="photo-list" id="photo-list">
+                <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
+                <div id="drop-area" data-multiple="true">
+                    <i class="bi bi-upload"></i>
+                        Drag&drop files here or click to select...
                 </div>
+                <div id="gallery" class="row"></div>
             </div>
             <div class="card-footer text-center d-flex justify-content-between">
                 <a href="{{ url_for('get_projects') }}" class="btn btn-lg btn-danger">Cancel</a>
-                <button type="submit" class="btn btn-lg btn-accent">Add</button>
+                <button type="submit" class="btn btn-lg btn-accent" id="submit-form">Add</button>
             </div>
         </form>
     </div>
@@ -59,4 +64,5 @@
 {% endblock content %}
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
+<script src="{{ url_for('static', filename='js/photos.js') }}"></script>
 {% endblock scripts %}
