--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -57,11 +57,11 @@
                         {% endif %}
                     </div>
                     <div class="mb-3">
-                        <input type="hidden" id="url-for-photos" value="{{ url_for('photos')}}">
+                        <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
                         <input type="hidden" id="collection" value="blogs">
                         <input type="hidden" id="doc-id" value="{{ post._id }}">
                         <label for="drop-area" class="form-label">New Photo</label>
-                        <input type="file" name="photos" id="drop-file-elem" accept="image/*">
+                        <input type="file" name="files" id="drop-file-elem" accept="image/*">
                         <div id="drop-area" data-multiple="false">
                             <i class="bi bi-upload"></i>
                             Drag&drop file here or click to select...
