refactor: update photos links for blogs, portofolio, post and project pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -148,6 +148,12 @@ a[data-bs-dismiss="toast"] {
     font-size: 1.5rem;
 }
 
+/*------------------------------------------ IMAGES */
+
+.gallery-item {
+    cursor: zoom-in;
+}
+
 /*------------------------------------------ BUTTONS */
 
 /* HOVER.CSS Grow */
