--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -30,7 +30,7 @@
             {% set photos = project.photos.split(',') %}
             <div class="col">
                 <div class="card card-project h-100">
-                    <img src="{{ photos[0].replace(' ', '') }}" class="card-img-top" alt="{{ project.title }}">
+                    <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}" class="card-img-top" alt="{{ project.title }}">
                     <div class="card-body">
                         <h5 class="card-title">{{ project.title }}</h5>
                         <p class="card-text">{{ project.description|truncate(80, True, ' ...') }}</p>
