--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -2,6 +2,10 @@
 {% block title %}
 - {{ post.title }}
 {% endblock title %}
+{% block styles %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+{% endblock styles %}
+
 {% block content %}
 <!-- Blog Post SECTION -->
 <section id="blog-post">
@@ -34,7 +38,10 @@
         <div class="row mb-4">
             <div class="col">
                 <figure class="float-start col-sm-6 col-md-4">
-                    <img src="{{ post.photos }}" alt="{{ post.title }}" class="post-photo">
+                    <a href="{{ url_for('uploads', filename=post.photos) }}"
+                                class="{{ post.slug }}-gallery">
+                        <img src="{{ url_for('uploads', filename=post.photos) }}" alt="{{ post.title }}" class="post-photo gallery-item">
+                    </a>
                 </figure>
                 <h3 class="post-title">{{ post.title }}</h3>
                 <p><small class="text-muted">{{ post.added_on }}</small></p>
@@ -51,3 +58,10 @@
     </div>
 </section>
 {% endblock content %}
+{% block scripts %}
+<script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+<!-- CREDIT: https://github.com/biati-digital/glightbox -->
+<script type="text/javascript">
+    const lightbox = GLightbox({ 'selector': '.{{ post.slug }}-gallery' });
+</script>
+{% endblock scripts %}
