--- a/templates/project.html
+++ b/templates/project.html
@@ -40,7 +40,11 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <figure>
-                    <img src="{{ photos[0].replace(' ', '') }}" alt="{{ project.title }}" class="project-main-photo">
+                    <a href="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                        class="{{ project.slug }}-gallery">
+                        <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                            alt="{{ project.title }}" class="project-main-photo gallery-item">
+                    </a>
                 </figure>
             </div>
             <div class="col-12 col-md-6">
@@ -86,12 +90,16 @@
         <h2 class="section-title text-shadow">Gallery</h2>
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 mb-4" data-masonry='{"percentPosition": true }'>
             {% for photo in photos %}
-            <div class="col">
-                <figure>
-                    <a href="{{ photo.replace(' ', '') }}" class="{{ project.slug }}-gallery"><img
-                            src="{{ photo.replace(' ', '') }}" alt="Photo {{ loop.index }}"></a>
-                </figure>
-            </div>
+                {% if loop.index0 > 0 %}
+                    <div class="col">
+                        <figure>
+                            <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                class="{{ project.slug }}-gallery"><img
+                                    src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                    alt="Photo {{ loop.index }}" class="gallery-item"></a>
+                        </figure>
+                    </div>
+                {% endif %}
             {% endfor %}
         </div>
         <div class="row">
