--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -1,4 +1,7 @@
 {% extends "admin/base.html" %}
+{% block styles %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+{% endblock styles %}
 {% block content %}
 <section id="edit_post">
     <div class="row my-2 align-items-center">
@@ -22,6 +25,7 @@
                             <label for="title">Title</label>
                         </div>
                         <div class="form-floating mb-3">
+                            <input type="hidden" id="initial-slug" value="{{ post.slug }}">
                             <input type="text" class="form-control" id="slug" name="slug" value="{{ post.slug }}"
                                 readonly="readonly">
                             <label for="slug">Slug</label>
@@ -46,14 +50,20 @@
                 </div>
                 <div class="card-body row justify-content-center g-2">
                     <label for="current-photo">Current Photo:</label>
-                    <div id="gallery">
+                    <div id="gallery" class="row">
                         {% if post.photos|length %}
-                        <div class="photo-container col-sm-4 col-md-6 col-lg-4">
-                            <img class="img-thumbnail" src="{{ url_for('uploads', filename=post.photos) }}" alt="{{ post.title }}">
-                            <button class="delete-photo btn btn-danger" data-photo-key="0">
-                                <i class="bi bi-trash-fill"></i>
-                            </button>
-                        </div>
+                        {% set photos = post.photos.split(',') %}
+                            {% for photo in photos %}
+                            <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                                <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                class="{{ post.slug }}-gallery">
+                                    <img class="img-thumbnail gallery-item" src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}" alt="Photo {{ loop.index }}">
+                                </a>
+                                <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
+                                    <i class="bi bi-trash-fill"></i>
+                                </a>
+                            </div>
+                            {% endfor %}
                         {% endif %}
                     </div>
                     <div class="mb-3">
@@ -66,7 +76,7 @@
                             <i class="bi bi-upload"></i>
                             Drag&drop file here or click to select...
                         </div>
-                        <small>This will replace the current image (if any). Empty submit will simply remove photo.</small>
+                        <small>This will replace the current image (if any).</small>
                     </div>
                 </div>
             </div>
@@ -77,4 +87,9 @@
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
 <script src="{{ url_for('static', filename='js/photos.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+<!-- CREDIT: https://github.com/biati-digital/glightbox -->
+<script type="text/javascript">
+    const lightbox = GLightbox({ 'selector': '.{{ post.slug }}-gallery' });
+</script>
 {% endblock scripts %}
