--- a/templates/admin/edit_project.html
+++ b/templates/admin/edit_project.html
@@ -1,4 +1,7 @@
 {% extends "admin/base.html" %}
+{% block styles %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+{% endblock styles %}
 {% block content %}
 <section id="edit_project">
     <div class="row my-2 align-items-center">
@@ -9,53 +12,97 @@
             <img src="{{ url_for('static', filename='images/project.svg') }}" alt="Project" class="section-image">
         </div>
     </div>
-    <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <form action="{{ url_for('edit_project', id=project._id) }}" method="POST">
-            <div class="card-header">
-                <h4 class="text-center">Edit</h4>
+    <div class="row g-4">
+        <div class="col-md-7">
+            <div class="card">
+                <form action="{{ url_for('edit_project', id=project._id) }}" method="POST">
+                    <div class="card-header">
+                        <h4 class="text-center">Edit</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="title" name="title" value="{{ project.title }}">
+                            <label for="title">Title</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="hidden" id="initial-slug" value="{{ project.slug }}">
+                            <input type="text" class="form-control" id="slug" name="slug" value="{{ project.slug }}"
+                                readonly="readonly">
+                            <label for="slug">Slug</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="tech" name="tech" value="{{ project.tech }}">
+                            <label for="tech">Technologies Used</label>
+                            <small class="text-muted">Separated by comma.</small>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="repo" name="repo" value="{{ project.repo }}">
+                            <label for="repo">Source code (repository url)</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="live_url" name="live_url"
+                                value="{{ project.live_url }}">
+                            <label for="live_url">Live URL</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <textarea class="form-control" rows="3" id="description" name="description"
+                                style="height: 100px;">{{ project.description }}</textarea>
+                            <label for="description">Description</label>
+                        </div>
+                    </div>
+                    <div class="card-footer text-center d-flex justify-content-between">
+                        <a href="{{ url_for('get_projects') }}" class="btn btn-lg btn-danger">Cancel</a>
+                        <button type="submit" class="btn btn-lg btn-accent confirm">Update</button>
+                    </div>
+                </form>
             </div>
-            <div class="card-body">
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="title" name="title" value="{{ project.title }}">
-                    <label for="title">Title</label>
+        </div>
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="text-center">Photos</h4>
                 </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="slug" name="slug" value="{{ project.slug }}"
-                        readonly="readonly">
-                    <label for="slug">Slug</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="tech" name="tech" value="{{ project.tech }}">
-                    <label for="tech">Technologies Used</label>
-                    <small class="text-muted">Separated by comma.</small>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="repo" name="repo" value="{{ project.repo }}">
-                    <label for="repo">Source code (repository url)</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="live_url" name="live_url"
-                        value="{{ project.live_url }}">
-                    <label for="live_url">Live URL</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <textarea class="form-control" rows="3" id="description" name="description"
-                        style="height: 100px;">{{ project.description }}</textarea>
-                    <label for="description">Description</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="photos" name="photos" value="{{ project.photos }}">
-                    <label for="photos">Photos</label>
+                <div class="card-body row justify-content-center g-2">
+                    <label for="current-photo">Current Photos:</label>
+                    <div id="gallery" class="row">
+                        {% if project.photos|length %}
+                        {% set photos = project.photos.split(',') %}
+                            {% for photo in photos %}
+                            <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                                <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                class="{{ project.slug }}-gallery">
+                                    <img class="img-thumbnail gallery-item" src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}" alt="Photo {{ loop.index }}">
+                                </a>
+                                <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
+                                    <i class="bi bi-trash-fill"></i>
+                                </a>
+                            </div>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                    <div class="mb-3">
+                        <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
+                        <input type="hidden" id="collection" value="projects">
+                        <input type="hidden" id="doc-id" value="{{ project._id }}">
+                        <label for="drop-area" class="form-label">Add Photos</label>
+                        <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
+                        <div id="drop-area" data-multiple="true">
+                            <i class="bi bi-upload"></i>
+                            Drag&drop file here or click to select...
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card-footer text-center d-flex justify-content-between">
-                <a href="{{ url_for('get_projects') }}" class="btn btn-lg btn-danger">Cancel</a>
-                <button type="submit" class="btn btn-lg btn-accent confirm">Update</button>
-            </div>
-        </form>
+        </div>
     </div>
 </section>
 {% endblock content %}
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
+<script src="{{ url_for('static', filename='js/photos.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+<!-- CREDIT: https://github.com/biati-digital/glightbox -->
+<script type="text/javascript">
+    const lightbox = GLightbox({ 'selector': '.{{ project.slug }}-gallery' });
+</script>
 {% endblock scripts %}
