--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -21,18 +21,22 @@
         </div>
         <ul class="list-group list-group-flush">
             {% for project in projects %}
-            {% set photos = project.photos.split(',') %}
             <li class="list-group-item d-flex justify-content-between">
                 <div class="row w-100 align-items-center">
                     <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
-                        <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
-                            alt="{{ project.title }}" class="img-fluid mb-1">
-                        {% for photo in photos %}
-                        {% if loop.index0 != 0 %}
-                        <img src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                            alt="Photo {{ loop.index }}" class="w-25">
+                        {% if project.photos|length %}
+                            {% set photos = project.photos.split(',') %}
+                            <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                                alt="{{ project.title }}" class="img-fluid mb-1">
+                            {% for photo in photos %}
+                                {% if loop.index0 != 0 %}
+                                <img src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                    alt="Photo {{ loop.index }}" class="w-25">
+                                {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            <i class="bi bi-display fs-1"></i>
                         {% endif %}
-                        {% endfor %}
                     </div>
                     <div class="col-12 col-sm-10">
                         <h3 class="text-start">{{ project.title }}</h3>
