--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -1,5 +1,6 @@
 {% extends "admin/base.html" %}
 {% block styles %}
+
 {% endblock styles %}
 {% block content %}
 <section id="add_post">
@@ -52,4 +53,18 @@
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
 <script src="{{ url_for('static', filename='js/photos.js') }}"></script>
+<script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script>
+    tinymce.init({
+        selector: '#body',
+        plugins: 'anchor autolink link image imagetools table spellchecker lists autoresize charmap code emoticons fullscreen help hr media paste preview print quickbars toc',
+        contextmenu: 'anchor link image imagetools table spellchecker lists',
+        toolbar: 'undo redo | styleselect | bold italic underline | alignleft aligncenter alignright alignjustify | numlist bullist | emoticons | code fullscreen',
+        toolbar_mode: 'wrap',
+        quickbars_insert_toolbar: false,
+        min_height: 300,
+        max_height: 500,
+        paste_as_text: true
+    });
+</script>
 {% endblock scripts %}
