--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -38,14 +38,14 @@
         <div class="row mb-4">
             <div class="col">
                 <figure class="float-start col-sm-6 col-md-4">
-                    <a href="{{ url_for('uploads', filename=post.photos) }}"
-                                class="{{ post.slug }}-gallery">
-                        <img src="{{ url_for('uploads', filename=post.photos) }}" alt="{{ post.title }}" class="post-photo gallery-item">
+                    <a href="{{ url_for('uploads', filename=post.photos) }}" class="{{ post.slug }}-gallery">
+                        <img src="{{ url_for('uploads', filename=post.photos) }}" alt="{{ post.title }}"
+                            class="post-photo gallery-item">
                     </a>
                 </figure>
                 <h3 class="post-title">{{ post.title }}</h3>
                 <p><small class="text-muted">{{ post.added_on }}</small></p>
-                <p>{{ post.body }}</p>
+                <p>{{ post.body|safe }}</p>
             </div>
         </div>
         <div class="row">
