--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -57,14 +57,17 @@
 <script>
     tinymce.init({
         selector: '#body',
-        plugins: 'anchor autolink link image imagetools table spellchecker lists autoresize charmap code emoticons fullscreen help hr media paste preview print quickbars toc',
-        contextmenu: 'anchor link image imagetools table spellchecker lists',
+        plugins: 'anchor autolink link image table spellchecker lists autoresize charmap code emoticons fullscreen help hr media paste preview print quickbars toc',
+        contextmenu: 'anchor link image table spellchecker lists',
         toolbar: 'undo redo | styleselect | bold italic underline | alignleft aligncenter alignright alignjustify | numlist bullist | emoticons | code fullscreen',
         toolbar_mode: 'wrap',
         quickbars_insert_toolbar: false,
         min_height: 300,
         max_height: 500,
         paste_as_text: true,
+        image_prepend_url: window.location.protocol + "//" + window.location.host + "/uploads",
+        document_base_url : window.location.protocol + "//" + window.location.host,
+        relative_urls: false,
         image_list: function(success) {
             success(getPhotoList());
         }
