--- a/templates/admin/blogs.html
+++ b/templates/admin/blogs.html
@@ -25,7 +25,8 @@
                 <div class="row w-100 align-items-center">
                     <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
                     {% if blog.photos|length %}
-                        <img src="{{ url_for('uploads', filename=blog.photos) }}" alt="{{ blog.title }}"
+                        {% set photos = blog.photos.split(',') %}
+                        <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}" alt="{{ blog.title }}"
                             class="img-fluid">
                     {% else %}
                         <i class="bi bi-blockquote-left fs-1"></i>
@@ -35,7 +36,7 @@
                         <h3 class="text-start">{{ blog.title }}</h3>
                         <span class="fst-italic">{{ blog.slug }}</span>
                         <small class="text-muted">{{ blog.added_on }}</small>
-                        <p class="pt-2 fw-light">{{ blog.body|truncate(250)|safe }}</p>
+                        <p class="pt-2 fw-light">{{ blog.body|safe|truncate(200) }}</p>
                     </div>
                 </div>
                 <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
