--- a/templates/blog.html
+++ b/templates/blog.html
@@ -31,13 +31,15 @@
                 <div class="card card-blogs">
                     <div class="row">
                         {% if blog.photos|length %}
-                        {% set photos = blog.photos.split(',') %}
-                        <div class="col-12 col-md-4 text-center">
-                            <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
-                                alt="{{ blog.title }}" class="img-fluid">
-                        </div>
+                            {% set photos = blog.photos.split(',') %}
+                            <div class="col-12 col-md-4 text-center">
+                                <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                                    alt="{{ blog.title }}" class="img-fluid">
+                            </div>
+                            <div class="card-blogs-body col-12 col-md-8">
+                        {% else %}
+                            <div class="card-blogs-body col-12">
                         {% endif %}
-                        <div class="card-blogs-body col-12 col-md-8">
                             <div class="card-body">
                                 <h2 class="card-title">{{ blog.title }}</h2>
                                 <div class="post-body">{{ blog.body|safe }}</div>
