feat(dashboard): add quick links panel and unapproved testimonials notification panel

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -166,6 +166,12 @@ main {
     border-top-right-radius: 0;
 }
 
+/*------------------------------------------ DASHBOARD */
+
+.card-news {
+    background-color: var(--text-light);
+}
+
 /*------------------------------------------ SKILLS */
 
 /* CREDIT
