--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -9,6 +9,43 @@
             <img src="{{ url_for('static', filename='images/dashboard.svg') }}" alt="Dashboard" class="section-image">
         </div>
     </div>
-    content
+    <div class="row mb-4">
+        <div class="col">
+            <div class="card card-quick-links">
+                <div class="card-header">
+                    <h4 class="text-center"><i class="bi bi-link-45deg"></i> Quick Links</h4>
+                </div>
+                <div class="card-body d-flex justify-content-around g-2">
+                    <a href="{{ url_for('add_blog') }}" class="btn btn-success m-2"><i class="bi bi-file-richtext-fill"></i> Add New Blog <i class="bi bi-plus-circle-dotted"></i></a>
+                    <a href="{{ url_for('add_project') }}" class="btn btn-success m-2"><i class="bi bi-display-fill"></i> Add New Project <i class="bi bi-plus-circle-dotted"></i></a>
+                    <a href="{{ url_for('add_skill') }}" class="btn btn-success m-2"><i class="bi bi-puzzle-fill"></i> Add New Skill <i class="bi bi-plus-circle-dotted"></i></a>
+                    <a href="{{ url_for('add_education') }}" class="btn btn-success m-2"><i class="bi bi-book-fill"></i> Add New School <i class="bi bi-plus-circle-dotted"></i></a>
+                    <a href="{{ url_for('add_experience') }}" class="btn btn-success m-2"><i class="bi bi-briefcase-fill"></i> Add New Job <i class="bi bi-plus-circle-dotted"></i></a>
+                    <a href="{{ url_for('add_skill') }}" class="btn btn-light m-2"><i class="bi bi-sliders"></i> General Settings</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% if testimonials > 0 %}
+        <div class="row mb-4">
+            <div class="col">
+                <div class="card card-news">
+                    <div class="card-header">
+                        <h4 class="text-center"><i class="bi bi-bell-fill"></i> Notifications</h4>
+                    </div>
+                    <div class="card-body text-center g-2">
+                        <h3 class="fw-normal">
+                        {% if testimonials == 1 %}
+                            There is <strong>1</strong> unapproved testimonial! 
+                        {% else %}
+                            There are <strong>{{ testimonials }}</strong> unapproved testimonials!
+                        {% endif %}
+                        </h3>
+                        <a href="{{ url_for('get_testimonials') }}" class="btn btn-lg btn-accent">View</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 </section>
 {% endblock content %}
