--- a/static/css/style.css
+++ b/static/css/style.css
@@ -561,6 +561,10 @@ nav[aria-label="breadcrumb"] {
     background-color: transparent;
 }
 
+.card-project .card-title a {
+    text-decoration: none;
+}
+
 /*------------------------------------------ PROJECT */
 
 #project-details .separator {
