--- a/templates/project.html
+++ b/templates/project.html
@@ -50,10 +50,14 @@
             <div class="col-12 col-md-6">
                 <h3 class="project-title">{{ project.title }}</h3>
                 <div class="d-grid gap-3 d-sm-flex">
-                    <a href="{{ project.repo }}" target="_blank" class="btn btn-dark w-100"> <i
+                    {% if project.repo %}
+                        <a href="{{ project.repo }}" target="_blank" class="btn btn-dark w-100"> <i
                             class="bi bi-github"></i> Source</a>
-                    <a href="{{ project.live_url }}" target="_blank" class="btn btn-accent-light w-100"><i
+                    {% endif %}
+                    {% if project.live_url %}
+                        <a href="{{ project.live_url }}" target="_blank" class="btn btn-accent-light w-100"><i
                             class="bi bi-display"></i> Demo</a>
+                    {% endif %}
                 </div>
                 <div class="project-tech">
                     <h4>Technologies</h4>
