--- a/templates/admin/settings.html
+++ b/templates/admin/settings.html
@@ -1,4 +1,7 @@
 {% extends "admin/base.html" %}
+{% block styles %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+{% endblock styles %}
 {% block content %}
 <section id="settings">
     <div class="row my-2 align-items-center">
@@ -9,71 +12,115 @@
             <img src="{{ url_for('static', filename='images/settings.svg') }}" alt="Settings" class="section-image">
         </div>
     </div>
-    <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <form action="{{ url_for('settings') }}" method="POST">
-            <div class="card-header">
-                <h4 class="text-center">Edit</h4>
+    <div class="row g-4">
+        <div class="col-md-7">
+            <div class="card">
+                <form action="{{ url_for('settings') }}" method="POST">
+                    <div class="card-header">
+                        <h4 class="text-center">Edit</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="name" name="name" value="{{ settings.name }}">
+                            <label for="name">Dev Name</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <textarea class="form-control" rows="3" id="bio" name="bio"
+                                style="height: 100px;">{{ settings.bio }}</textarea>
+                            <label for="bio">Bio</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="status" name="status" value="{{ settings.status }}">
+                            <label for="status">Status</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="availability" name="availability"
+                                value="{{ settings.availability }}">
+                            <label for="availability">Availability</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="email" name="email" value="{{ settings.email }}">
+                            <label for="email">Email address</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="phone" name="phone" value="{{ settings.phone }}">
+                            <label for="phone">Phone number</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="address" name="address" value="{{ settings.address }}">
+                            <label for="address">Address</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="cv" name="cv" value="{{ settings.cv }}">
+                            <label for="cv">CV</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="meta_title" name="meta_title"
+                                value="{{ settings.meta_title }}">
+                            <label for="meta_title">META Title</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="meta_desc" name="meta_desc"
+                                value="{{ settings.meta_desc }}">
+                            <label for="meta_desc">META Description</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="meta_keys" name="meta_keys"
+                                value="{{ settings.meta_keys }}">
+                            <label for="meta_keys">META Keywords</label>
+                            <small class="text-muted">separated by comma</small>
+                        </div>
+                    </div>
+                    <div class="card-footer text-center">
+                        <button type="submit" class="btn btn-lg btn-accent">Update</button>
+                    </div>
+                </form>
             </div>
-            <div class="card-body">
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="name" name="name" value="{{ settings.name }}">
-                    <label for="name">Dev Name</label>
+        </div>
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="text-center">Photo</h4>
                 </div>
-                <div class="form-floating mb-3">
-                    <textarea class="form-control" rows="3" id="bio" name="bio"
-                        style="height: 100px;">{{ settings.bio }}</textarea>
-                    <label for="bio">Bio</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="status" name="status" value="{{ settings.status }}">
-                    <label for="status">Status</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="availability" name="availability"
-                        value="{{ settings.availability }}">
-                    <label for="availability">Availability</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="email" name="email" value="{{ settings.email }}">
-                    <label for="email">Email address</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="phone" name="phone" value="{{ settings.phone }}">
-                    <label for="phone">Phone number</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="address" name="address" value="{{ settings.address }}">
-                    <label for="address">Address</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="photo" name="photo" value="{{ settings.photo }}">
-                    <label for="photo">Photo</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="cv" name="cv" value="{{ settings.cv }}">
-                    <label for="cv">CV</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="meta_title" name="meta_title"
-                        value="{{ settings.meta_title }}">
-                    <label for="meta_title">META Title</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="meta_desc" name="meta_desc"
-                        value="{{ settings.meta_desc }}">
-                    <label for="meta_desc">META Description</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="meta_keys" name="meta_keys"
-                        value="{{ settings.meta_keys }}">
-                    <label for="meta_keys">META Keywords</label>
-                    <small class="text-muted">separated by comma</small>
+                <div class="card-body row justify-content-center g-2">
+                    <label for="current-photo">Current Photo:</label>
+                    <div id="gallery" class="row">
+                        {% if settings.photos|length %}
+                            <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                                <a href="{{ url_for('uploads', filename=settings.photos) }}" class="settings-gallery">
+                                    <img class="img-thumbnail gallery-item"
+                                        src="{{ url_for('uploads', filename=settings.photos) }}"
+                                        alt="Profile Photo">
+                                </a>
+                                <a class="delete-photo btn btn-danger" data-photo-key="0">
+                                    <i class="bi bi-trash-fill"></i>
+                                </a>
+                            </div>
+                        {% endif %}
+                    </div>
+                    <div class="mb-3">
+                        <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
+                        <input type="hidden" id="collection" value="settings">
+                        <input type="hidden" id="doc-id" value="{{ settings._id }}">
+                        <label for="drop-area" class="form-label">New Photo</label>
+                        <input type="file" name="files" id="drop-file-elem" accept="image/*">
+                        <div id="drop-area" data-multiple="false">
+                            <i class="bi bi-upload"></i>
+                            Drag&drop file here or click to select...
+                        </div>
+                        <small>This will replace the current image (if any).</small>
+                    </div>
                 </div>
             </div>
-            <div class="card-footer text-center">
-                <button type="submit" class="btn btn-lg btn-accent">Update</button>
-            </div>
-        </form>
+        </div>
     </div>
 </section>
 {% endblock content %}
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/photos.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+<!-- CREDIT: https://github.com/biati-digital/glightbox -->
+<script type="text/javascript">
+    const lightbox = GLightbox({ 'selector': '.settings-gallery' });
+</script>
+{% endblock scripts %}
