--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,8 +5,9 @@
     <div class="container-xl">
         <div class="row align-items-center justify-content-center g-5 py-5 hero">
             <div class="col-8 col-sm-6 col-md-5 col-lg-4">
-                <img src="{{ settings.photo }}" class="hero-img d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-                    width="700" height="500" loading="lazy">
+                <img src="{{ url_for('uploads', filename=settings.photos.replace(' ', '')) }}"
+                    class="hero-img d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500"
+                    loading="lazy">
             </div>
             <div class="col-12 col-md-7 col-lg-8">
                 <h1 class="hero-title display-5 fw-bold lh-1 mb-3 text-shadow">{{ settings.name }}</h1>
@@ -49,14 +50,15 @@
         <h2 class="section-title">Skills</h2>
         <div class="row">
             {% for skill in skills %}
-                <div class="col-12 col-sm-6">
-                    <div class="skill-container">
-                        <span class="skill-label">{{ skill.name }}</span>
-                        <div class="progress">
-                            <div class="progress-bar bg-accent" role="progressbar" style="width: {{ skill.percentage }}%" aria-valuenow="{{ skill.percentage }}" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
+            <div class="col-12 col-sm-6">
+                <div class="skill-container">
+                    <span class="skill-label">{{ skill.name }}</span>
+                    <div class="progress">
+                        <div class="progress-bar bg-accent" role="progressbar" style="width: {{ skill.percentage }}%"
+                            aria-valuenow="{{ skill.percentage }}" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
+            </div>
             {% endfor %}
         </div>
     </div>
@@ -65,7 +67,7 @@
 <section id="education">
     <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
     <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
-    preserveAspectRatio="none">
+        preserveAspectRatio="none">
         <g class="separator" transform="translate(-9.2218046,-83.494585)">
             <path class="fill-accent"
                 d="M 9.484815,89.716055 H 209.81018 V 126.90507 L 110.46368,93.705147 9.579391,127.39334 Z" />
@@ -76,22 +78,22 @@
     <div class="container-xl">
         <h2 class="section-title">Education</h2>
         {% for school in education %}
-            <div class="card card-education mb-3 w-100">
-                <div class="row g-0">
-                    <div class="col-md-4 bg-accent card-left">
-                        <i class="bi bi-book-half"></i>
-                        <h4>{{ school.school }}</h4>
-                        <span class="period">{{ school.period }}</span>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h4 class="card-title">{{ school.title }}</h4>
-                            <h5 class="card-subtitle">{{ school.department }}</h5>
-                            <p class="card-text">{{ school.description }}</p>
-                        </div>
+        <div class="card card-education mb-3 w-100">
+            <div class="row g-0">
+                <div class="col-md-4 bg-accent card-left">
+                    <i class="bi bi-book-half"></i>
+                    <h4>{{ school.school }}</h4>
+                    <span class="period">{{ school.period }}</span>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title">{{ school.title }}</h4>
+                        <h5 class="card-subtitle">{{ school.department }}</h5>
+                        <p class="card-text">{{ school.description }}</p>
                     </div>
                 </div>
             </div>
+        </div>
         {% endfor %}
     </div>
 </section>
@@ -99,7 +101,7 @@
 <section id="experience">
     <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
     <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
-    preserveAspectRatio="none">
+        preserveAspectRatio="none">
         <g class="separator" transform="translate(-9.2218046,-83.494585)">
             <path class="fill-dark"
                 d="M 9.484815,89.716055 H 209.81018 V 126.90507 L 110.46368,93.705147 9.579391,127.39334 Z" />
@@ -110,21 +112,21 @@
     <div class="container-xl">
         <h2 class="section-title">Experience</h2>
         {% for job in experience %}
-            <div class="card card-experience bg-accent mb-3 w-100">
-                <div class="row g-0">
-                    <div class="col-md-4 card-left">
-                        <i class="bi bi-code-square"></i>
-                        <span class="period">{{ job.period }}</span>
-                        <h4>{{ job.company }}</h4>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h4 class="card-title">{{ job.role }}</h4>
-                            <p class="card-text">{{ job.description }}</p>
-                        </div>
+        <div class="card card-experience bg-accent mb-3 w-100">
+            <div class="row g-0">
+                <div class="col-md-4 card-left">
+                    <i class="bi bi-code-square"></i>
+                    <span class="period">{{ job.period }}</span>
+                    <h4>{{ job.company }}</h4>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title">{{ job.role }}</h4>
+                        <p class="card-text">{{ job.description }}</p>
                     </div>
                 </div>
             </div>
+        </div>
         {% endfor %}
     </div>
 </section>
@@ -132,7 +134,7 @@
 <section id="testimonials">
     <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
     <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
-    preserveAspectRatio="none">
+        preserveAspectRatio="none">
         <g class="separator" transform="translate(-9.2218046,-83.494585)">
             <path class="fill-dark"
                 d="M 9.484815,89.716055 H 209.81018 V 126.90507 L 110.46368,93.705147 9.579391,127.39334 Z" />
@@ -142,16 +144,16 @@
     </svg>
     <div class="container-xl">
         <h2 class="section-title text-shadow">Testimonials</h2>
-            <div class="card card-testimonials mb-3 w-100">
-                <div class="card-body">
-                    <div id="carousel-testimonials" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+        <div class="card card-testimonials mb-3 w-100">
+            <div class="card-body">
+                <div id="carousel-testimonials" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
                         {% for testimonial in testimonials %}
-                            {% if loop.index0 == 0 %}
-                                <div class="carousel-item active">
+                        {% if loop.index0 == 0 %}
+                        <div class="carousel-item active">
                             {% else %}
-                                <div class="carousel-item">
-                            {% endif %}
+                            <div class="carousel-item">
+                                {% endif %}
                                 <figure class="text-center">
                                     <blockquote class="blockquote">
                                         <p>{{ testimonial.text }}</p>
@@ -161,20 +163,22 @@
                                     </figcaption>
                                 </figure>
                             </div>
-                        {% endfor %}
+                            {% endfor %}
                         </div>
                         <div class="carousel-indicators">
                             {% for testimonial in testimonials %}
-                                {% if loop.index0 == 0 %}
-                                    <button type="button" data-bs-target="#carousel-testimonials" data-bs-slide-to="0" class="active" aria-current="true" aria-label="{{ testimonial.author }}"></button>
-                                {% else %}
-                                    <button type="button" data-bs-target="#carousel-testimonials" data-bs-slide-to="{{ loop.index0 }}" aria-label="{{ testimonial.author }}"></button>
-                                {% endif %}
+                            {% if loop.index0 == 0 %}
+                            <button type="button" data-bs-target="#carousel-testimonials" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="{{ testimonial.author }}"></button>
+                            {% else %}
+                            <button type="button" data-bs-target="#carousel-testimonials"
+                                data-bs-slide-to="{{ loop.index0 }}" aria-label="{{ testimonial.author }}"></button>
+                            {% endif %}
                             {% endfor %}
                         </div>
                     </div>
                 </div>
             </div>
-    </div>
+        </div>
 </section>
 {% endblock content %}
