--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="{{ settings.meta_desc }}">
     <meta name="author" content="Paul Istratoaie">
-    <meta name="theme-color" content="#168fd6">
+    <title>{{ settings.meta_title }} - Dashboard</title>
+    <!-- STYLES -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"
         type="text/css">
@@ -15,8 +16,20 @@
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}" type="text/css">
+    <!-- ICONS & THEME -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='images/favicon.svg') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon-16x16.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="194x194"
+        href="{{ url_for('static', filename='images/favicon-194x194.png') }}">
+    <link rel="icon" type="image/png" sizes="192x192"
+        href="{{ url_for('static', filename='images/android-chrome-192x192.png') }}">
+    <link rel="mask-icon" href="{{ url_for('static', filename='images/safari-pinned-tab.svg') }}" color="#168fd6">
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
+    <meta name="msapplication-TileColor" content="#168fd6">
+    <meta name="theme-color" content="#168fd6">
     {% block styles %}{% endblock styles %}
-    <title>{{ settings.meta_title }} - Dashboard</title>
 </head>
 
 <body>
