--- a/templates/base.html
+++ b/templates/base.html
@@ -8,22 +8,35 @@
     <meta name="description" content="{{ settings.meta_desc }}" />
     <meta name="keywords" content="{{ settings.meta_keys }}" />
     <meta name="author" content="Paul Istratoaie">
-    <meta name="theme-color" content="#168fd6">
+    <title>{{ settings.meta_title }} {% block title %} {% endblock title %}</title>
+    <!-- STYLES -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"
         type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
         type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <!-- ICONS & THEME -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='images/favicon.svg') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon-16x16.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="194x194"
+        href="{{ url_for('static', filename='images/favicon-194x194.png') }}">
+    <link rel="icon" type="image/png" sizes="192x192"
+        href="{{ url_for('static', filename='images/android-chrome-192x192.png') }}">
+    <link rel="mask-icon" href="{{ url_for('static', filename='images/safari-pinned-tab.svg') }}" color="#168fd6">
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
+    <meta name="msapplication-TileColor" content="#168fd6">
+    <meta name="theme-color" content="#168fd6">
     {% block styles %}
     {% endblock styles %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>{{ settings.meta_title }} {% block title %} {% endblock title %}</title>
 </head>
 
 <body class="d-flex flex-column h-100">
     <nav class="navbar bg-accent-transparent navbar-expand-md sticky-top">
         <div class="container-xxl">
-            <a class="navbar-brand" href="{{ url_for('home') }}">{&pi;} Dev.PI</a>
+            <a class="navbar-brand" href="{{ url_for('home') }}">{&pi;}Dev.PI</a>
             <button class="navbar-toggler text-shadow" id="navbar-toggler" type="button" aria-label="Toggle navigation"
                 data-toggle="offcavas">
                 <i class="bi bi-list"></i>
