feat(contact): make client/server side validation for contact form
Remove flask-recaptcha and use built in recaptcha from flask-wtf

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,6 +90,10 @@ h1, h2, h3 {
     color: var(--accent);
 }
 
+textarea.form-control {
+    min-height: 100px;
+}
+
 /*------------------------------------------ UTILS */
 
 .bg-accent {
