--- a/templates/write-testimonial.html
+++ b/templates/write-testimonial.html
@@ -44,8 +44,8 @@
                                 {{ form.text(class="form-control", rows="3", placeholder="Your message here...") }}
                                 {{ form.text.label }}
                             </div>
-                            <div class="my-2">{{ recaptcha }}</div>
-                            <button type="submit" class="btn btn-lg btn-accent bg-accent">Submit</button>
+                            <div class="my-2">{{ form.recaptcha }}</div>
+                            {{ form.submit(class="btn btn-lg btn-accent bg-accent") }}
                         </form>
                     </div>
                 </div>
