feat(admin): add client&server side validation for add_blog and edit_blog forms

--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -13,38 +13,39 @@
         </div>
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <form action="{{ url_for('add_blog') }}" method="POST" enctype="multipart/form-data" id="dropzoneForm">
+        <form action="{{ url_for('add_blog') }}" method="POST">
+            {{ form.csrf_token }}
             <div class="card-header">
                 <h4 class="text-center">New</h4>
             </div>
             <div class="card-body">
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="title" name="title" placeholder="New Post Title">
-                    <label for="title">Title</label>
+                    {{ form.title(class="form-control", placeholder="Title") }}
+                    {{ form.title.label }}
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="slug" name="slug" placeholder="new-post-title"
-                        readonly="readonly">
-                    <label for="slug">Slug</label>
+                    {{ form.slug(class="form-control", placeholder="Slug") }}
+                    {{ form.slug.label }}
                 </div>
-                <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
+                {{ form.url_for_files(value="%s" | format(url_for('files'))) }}
                 <input type="hidden" id="collection" value="blogs">
+                {{ form.collection(value="blogs") }}
                 <input type="hidden" name="photo-list" id="photo-list">
+                {{ form.photo_list() }}
                 <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
                 <div id="drop-area" data-multiple="true">
                     <i class="bi bi-upload"></i>
-                        Drag&drop files here or click to select...
+                    Drag&drop files here or click to select...
                 </div>
                 <div id="gallery" class="row"></div>
                 <div class="form-floating mb-3">
-                    <textarea class="form-control" rows="3" id="body" name="body" style="height: 100px;"
-                        placeholder="..."></textarea>
-                    <label for="body">Text</label>
+                    {{ form.body(class="form-control") }}
+                    {{ form.body.label }}
                 </div>
             </div>
             <div class="card-footer text-center d-flex justify-content-between">
                 <a href="{{ url_for('get_blogs') }}" class="btn btn-lg btn-danger" id="cancel-form">Cancel</a>
-                <button type="submit" class="btn btn-lg btn-accent" id="submit-form">Add</button>
+                {{ form.submit(class="btn btn-lg btn-accent", id="submit-form") }}
             </div>
         </form>
     </div>
@@ -53,7 +54,8 @@
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
 <script src="{{ url_for('static', filename='js/photos.js') }}"></script>
-<script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js"
+    referrerpolicy="origin"></script>
 <script>
     tinymce.init({
         selector: '#body',
@@ -66,11 +68,11 @@
         max_height: 500,
         paste_as_text: true,
         image_prepend_url: window.location.protocol + "//" + window.location.host + "/uploads",
-        document_base_url : window.location.protocol + "//" + window.location.host,
+        document_base_url: window.location.protocol + "//" + window.location.host,
         relative_urls: false,
-        content_css : '/static/css/style.css',
+        content_css: '/static/css/style.css',
         content_style: 'body { background-color: #fffcf6; }',
-        image_list: function(success) {
+        image_list: function (success) {
             success(getPhotoList());
         }
     });
