--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -16,29 +16,28 @@
         <div class="col-md-7">
             <div class="card">
                 <form action="{{ url_for('edit_blog', id=post._id) }}" method="POST">
+                    {{ form.csrf_token }}
                     <div class="card-header">
                         <h4 class="text-center">Edit</h4>
                     </div>
                     <div class="card-body">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="title" name="title" value="{{ post.title }}">
-                            <label for="title">Title</label>
+                            {{ form.title(class="form-control", value="%s" | format(post.title)) }}
+                            {{ form.title.label }}
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="hidden" id="initial-slug" value="{{ post.slug }}">
-                            <input type="text" class="form-control" id="slug" name="slug" value="{{ post.slug }}"
-                                readonly="readonly">
-                            <label for="slug">Slug</label>
+                            {{ form.initial_slug(value="%s" | format(post.slug)) }}
+                            {{ form.slug(class="form-control", value="%s" | format(post.slug)) }}
+                            {{ form.slug.label }}
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea class="form-control" rows="3" id="body" name="body"
-                                style="height: 100px;">{{ post.body }}</textarea>
-                            <label for="body">Text</label>
+                            {{ form.body(class="form-control") }}
+                            {{ form.body.label }}
                         </div>
                     </div>
                     <div class="card-footer text-center d-flex justify-content-between">
                         <a href="{{ url_for('get_blogs') }}" class="btn btn-lg btn-danger">Cancel</a>
-                        <button type="submit" name="blog-data" class="btn btn-lg btn-accent confirm">Update</button>
+                        {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
                     </div>
                 </form>
             </div>
@@ -52,20 +51,20 @@
                     <label for="current-photo">Current Photos:</label>
                     <div id="gallery" class="row">
                         {% if post.photos|length %}
-                            {% set photos = post.photos.split(',') %}
-                            {% for photo in photos %}
-                                <div class="photo-container col-sm-4 col-md-6 col-lg-4">
-                                    <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                        class="{{ post.slug }}-gallery">
-                                        <img class="img-thumbnail gallery-item"
-                                            src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                            alt="Photo {{ loop.index }}">
-                                    </a>
-                                    <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
-                                        <i class="bi bi-trash-fill"></i>
-                                    </a>
-                                </div>
-                            {% endfor %}
+                        {% set photos = post.photos.split(',') %}
+                        {% for photo in photos %}
+                        <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                            <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                class="{{ post.slug }}-gallery">
+                                <img class="img-thumbnail gallery-item"
+                                    src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                    alt="Photo {{ loop.index }}">
+                            </a>
+                            <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </div>
+                        {% endfor %}
                         {% endif %}
                     </div>
                     <div class="mb-3">
