--- a/templates/admin/testimonials.html
+++ b/templates/admin/testimonials.html
@@ -11,6 +11,7 @@
     </div>
     <div class="card">
         <form action="{{ url_for('get_testimonials') }}" method="POST">
+        {{ form.csrf_token }}
         <div class="card-header text-center">
             <button type="submit" class="btn btn-lg btn-accent">Update</button>
         </div>
@@ -55,7 +56,7 @@
             {% endfor %}
         </ul>
         <div class="card-footer text-center">
-            <button type="submit" class="btn btn-lg btn-accent">Update</button>
+            {{ form.submit(class="btn btn-lg btn-accent") }}
         </div>
         </form>
     </div>
